--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,11 +20,11 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/RapidPay2.0.jar
+dist.jar=${dist.dir}/RapidPay2.1_Beta_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=../tutaaaaa/tut/dist/lib/AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar=C:\\Users\\Imal\\Documents\\My Dropbox\\ImalGrnteam\\ProGreenIt\\lib\\AbsoluteLayout.jar
 file.reference.jcalendar-1.3.3.jar=../../all jar files/jcalendar-1.3.3.jar
 file.reference.jfreechart-1.0.0.jar-1=../tutaaaaa/tut/dist/lib/jfreechart-1.0.0.jar
 file.reference.mysql-connector-java-3.1.11-bin.jar=../../Jars/mysql-connector-java-3.1.11-bin.jar
@@ -49,7 +49,6 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.antlr-2.7.5.jar}:\
     ${file.reference.asm-attrs.jar}:\
     ${file.reference.asm.jar}:\
@@ -116,8 +115,9 @@ javac.classpath=\
     ${file.reference.substance.jar}:\
     ${file.reference.balloontip.jar}:\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
