--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,9 +24,10 @@ dist.jar=${dist.dir}/RapidPay2.1_Beta_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Users\\Imal\\Documents\\My Dropbox\\ImalGrnteam\\ProGreenIt\\lib\\AbsoluteLayout.jar
+file.reference.balloontip-1.0.jar=G:\\J2SE\\Important JARs\\Ballon tips\\balloontip_1.0\\balloontip-1.0.jar
 file.reference.jcalendar-1.3.3.jar=../../all jar files/jcalendar-1.3.3.jar
 file.reference.jfreechart-1.0.0.jar-1=../tutaaaaa/tut/dist/lib/jfreechart-1.0.0.jar
+file.reference.jpos111.jar-1=C:\\Program Files (x86)\\Epson\\JavaPOS\\lib\\jpos111.jar
 file.reference.mysql-connector-java-3.1.11-bin.jar=../../Jars/mysql-connector-java-3.1.11-bin.jar
 file.reference.mysql-connector-java-5.1.17-bin.jar=../Jars for tution/mysql-connector-java-5.1.17-bin.jar
 file.reference.synthetica.jar-10=../thanx to java lovers synthetica is cracked/synthetica.jar
@@ -46,7 +47,9 @@ file.reference.syntheticaBlueIce.jar-2=../Important JARs/synthatica/syntheticaBl
 file.reference.syntheticaBlueIce.jar-3=../jdownloader synthetica/syntheticaBlueIce.jar
 file.reference.syntheticaBlueSteel.jar=../thanx to java lovers synthetica is cracked/syntheticaBlueSteel.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.antlr-2.7.5.jar}:\
@@ -116,8 +119,9 @@ javac.classpath=\
     ${file.reference.balloontip.jar}:\
     ${file.reference.mysql-connector-java-5.1.17-bin.jar}:\
     ${libs.beans-binding.classpath}:\
+    ${file.reference.balloontip-1.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.jpos111.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -142,9 +146,14 @@ javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/F:/J2SE/Projects_workingOn/RapidPay1.8.0/dist/
+jnlp.descriptor=application
 jnlp.enabled=false
+jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=tuition.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
